# Project-Chimera

./: .coderabbit.yaml  .dockerignore  .gitignore  CONTRIBUTING.md  Delivery_Challenge_Client_Email.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  research_architecture_strategy.md
.cursor/: mcp.json
.cursor/rules/: agent.mdc  chimera-core.mdc
.github/workflows/: main.yml
.specify/memory/: constitution.md
docs/: transcripts.md
docs/adr/: 0001-hierarchical-swarm-architecture.md  0002-mcp-first-integration.md  0003-hybrid-database-strategy.md
research/: tooling_strategy.md
skills/: README.md  __init__.py  commerce_manager.py  content_generator.py  trend_fetcher.py
specs/: _meta.md  frontend.md  functional.md  openclaw_integration.md  rule_creation.md  security.md  technical.md
tests/: __init__.py  test_skills_interface.py  test_trend_fetcher.py
