[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Network — spec-driven agent swarm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pytest>=7.0",
    "redis>=5.0",
    "weaviate-client>=4.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
